--- a/Slider/style.css
+++ b/Slider/style.css
@@ -9,7 +9,7 @@ body {
     overflow: hidden;
     margin: 0;
     height: 100vh;
-    background: #AAB2C6;
+    background: #181A1D;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -20,69 +20,31 @@ body {
     display: flex;
     padding: 0 20px;
 }
-
-.slide_1 {
+.slide {
     height: 80vh;
     border-radius: 20px;
     margin: 10px;
     cursor: pointer;
-    color: antiquewhite;
+    color: #FFF5F5;
     flex: 1;
-    background-image: url(https://images.unsplash.com/photo-1568750616747-9258254cc3b1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1229&q=80);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     position: relative;
+    transition: all 500ms ease-in-out;
 }
-.slide_2 {
-    height: 80vh;
-    border-radius: 20px;
-    margin: 10px;
-    cursor: pointer;
-    color: antiquewhite;
-    flex: 1;
-    background-image: url(https://images.unsplash.com/photo-1607603750909-408e193868c7?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    position: relative;
+.slide h3 {
+    position: absolute;
+    font-size: 24px;
+    bottom: 20px;
+    left: 50px;
+    margin: 0;
+    opacity: 0;
 }
-.slide_3 {
-    height: 80vh;
-    border-radius: 20px;
-    margin: 10px;
-    cursor: pointer;
-    color: antiquewhite;
-    flex: 1;
-    background-image: url(https://images.unsplash.com/photo-1615394695852-da39a8df9bf1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    position: relative;
+.slide.active {
+    flex: 10;
 }
-.slide_4 {
-    height: 80vh;
-    border-radius: 20px;
-    margin: 10px;
-    cursor: pointer;
-    color: antiquewhite;
-    flex: 1;
-    background-image: url(https://images.unsplash.com/photo-1593063659199-f1f924fef0cc?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    position: relative;
-}
-.slide_5 {
-    height: 80vh;
-    border-radius: 20px;
-    margin: 10px;
-    cursor: pointer;
-    color: antiquewhite;
-    flex: 1;
-    background-image: url(https://images.unsplash.com/photo-1629574180667-0753d6512a1b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1074&q=80);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    position: relative;
+.slide.active h3 {
+    opacity: 1;
+    transition: opacity 0.4s ease-in 0.4s;
 }
